removed old dialogue program files & .ionide folder

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@ Project1/customFact.ps
 Project1/customFactorial.ps
 Project1/customFibonacciNumbers.ps
 Project1/customSieveOfEratosthenes.ps
+
+Project3/.ionide/
+Project3/DialogueProgram.fsx
+Project3/DialogueProgramMono.fsx
+Project3/personalSettings.fsx
+
+
