change basicGUI.fs to link with GUI.fsi file

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ Project3/DialogueProgram.fsx
 Project3/DialogueProgramMono.fsx
 Project3/personalSettings.fsx
 
-
+nim_game_group3.zip
+Applied_Functional_Programming_Report_3.pdf
